[tool.poetry]
name = "miscutils"
version = "0.0.1"
description = "Miscellaneous python functions and classes"
authors = ["Dmytro Donukis"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "~3.10.6"
arrow = "^1.2.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
